<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">衣美配</string>
    <string name="action_settings">Settings</string>

    <string name="login_account_hint">请输入账号/昵称/Email&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_repeatpwd_hint">请确认密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 &gt;</string>
    <string name="login_nickname_hint">请输入昵称&#8230;</string>
    <string name="login_nickname">昵称</string>
    <string name="login_password">密码 </string>
    <string name="login_repeatpwd">确认 </string>
    <string name="message_search_hint">搜索&#8230;</string>
    
    <string name="nav_main_home">主页</string>
    <string name="nav_main_center">发现</string>
    <string name="nav_main_take">晒</string>
    <string name="nav_main_message">消息</string>
    <string name="nav_main_my">我的</string>
    
    <string name="collo_comment_hint">请输入评论内容</string>
    <string name="collo_comment_send">发送</string>
    
    <string name="xlistview_header_hint_normal">下拉可以刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_header_updated_at">上次更新于%1$s前</string>
    <string name="xlistview_header_updated_just_now">刚刚更新过</string>
    <string name="xlistview_header_not_updated_yet">暂未更新过</string>
    <string name="xlistview_header_time_error">时间有问题</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">真实姓名</string>
    <string name="add_gender">性别</string>
    <string name="add_account">账号</string>
    <string name="add_email">邮箱地址</string>
    <string name="add_birthday">生日</string>
    <string name="add_summary">个性签名</string>
    <string name="add_qq">腾讯QQ</string>
    <string name="add_ww">淘宝旺旺</string>
    
    <string name="my_info">我的资料</string>
    <string name="my_friend">我的好友</string>
    <string name="my_blacklist">黑名单</string>
    <string name="my_settings">设置</string>
    
    <string name="set_notify">接收新消息通知</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="set_speaker">使用扬声器播放语音</string>
    <string name="tips">提示</string>
    
    <string name="logout">退出登陆</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用，请检查您的网络！</string>
    <string name="toast_error_account_null">账号不能为空</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_nickname_null">昵称不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>

    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    
    <string name="send_state">已读</string>
    
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息！</string>
    
    <string name="nickname">昵称</string>
    <string name="search">搜索</string>
    
    <string name="new_friends">新的朋友</string>
    
    <string name="near_people">附近的人</string>
    
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    
    <string name="voice_short_tips">录音时间太短</string>
    
    <string name="show_notice">进行初始化操作！</string>
</resources>
