<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <ScrollView
        android:id="@+id/user_info_refresh"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/layout_head"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/iv_set_avator"
                        style="@style/Smile.ImageView"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/head" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dip"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/iv_set_nickname"
                            style="@style/Smile.TextView._Black"
                            android:layout_height="30.0dip"
                            android:gravity="left|center"
                            android:singleLine="true"
                            android:text="太美一号" />

                        <TextView
                            android:id="@+id/iv_set_summary"
                            style="@style/Smile.TextView._Gray"
                            android:gravity="center_vertical"
                            android:singleLine="true"
                            android:text="songzigw"
                            android:textSize="14.0sp" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    style="@style/Smile.ImageView"
                    android:layout_width="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/register_bottom_arrow"
                    android:visibility="gone" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_about_selector"
                android:padding="20dp" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/add_nick" />

                <TextView
                    android:id="@+id/tv_set_nick"
                    style="@style/Smile.TextView._Gray"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="zhangsong" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_about_selector"
                android:padding="20dp" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/add_gender" />

                <TextView
                    android:id="@+id/tv_set_gender"
                    style="@style/Smile.TextView._Gray"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="zhangsong" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_about_selector"
                android:padding="20dp" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/add_birthday" />

                <TextView
                    android:id="@+id/tv_set_birthday"
                    style="@style/Smile.TextView._Gray"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="zhangsong" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_about_selector"
                android:padding="20dp" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/add_summary" />

                <TextView
                    android:id="@+id/tv_set_summary"
                    style="@style/Smile.TextView._Gray"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="zhangsong" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_add_friend"
                style="@style/Smile.Button.theme"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/add_friend"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_chat"
                style="@style/Smile.Button.theme"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/chat" />

            <Button
                android:id="@+id/btn_back"
                style="@style/Smile.Button.logout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/blacklist" />

            <RelativeLayout
                android:id="@+id/layout_black_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    style="@style/Smile.TextView._Black"
                    android:layout_centerInParent="true"
                    android:text="@string/black_tips"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>